[project]
name = "roman-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "typer>=0.16.0",
]

[project.scripts]
converter = "roman_converter.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
